@@ -1,3 +1,9 @@
+2012-12-12  Tom Lane  <tgl@sss.pgh.pa.us>
+
+	* libtiff/tif_print.c: Fix TIFFPrintDirectory's handling of
+	field_passcount fields: it had the TIFF_VARIABLE and
+	TIFF_VARIABLE2 cases backwards.
+
 2012-12-10  Tom Lane  <tgl@sss.pgh.pa.us>
 
 	* tools/ppm2tiff.c: Improve previous patch for CVE-2012-4564:
